# measure_extinction

./: .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  codecov.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: tox-tests.yml
docs/: calc_extinction.rst  code_capabilities.rst  conf.py  data_formats.rst  index.rst  model_capabilities.rst  model_data.rst  model_standards.rst  plotting.rst  reference_api.rst  requirements.txt
licenses/: LICENSE.rst
measure_extinction/: __init__.py  _astropy_init.py  calc_ext.py  conftest.py  extdata.py  merge_obsspec.py  model.py  modeldata.py  plot_ext.py  plot_spec.py  stardata.py
measure_extinction/data/: HD014422_ext.eps  HD229238_ext.fits  HI_lines.list  fit_band_ext_result_hd229238_hd204172.txt  fit_spex_ext_result_hd229238_hd204172.txt  hd064802_iue.fits  hd229238_hd204172_ext.fits  hd283809_hd064802_ext.fits  hd283809_stis.fits  red-comp.list
measure_extinction/data/Orig/NIR/: HD014422.txt  HD014422_LXD.txt  HD014422_SXD.txt  HD14422_table.fits  HD204172_LXD.txt  HD204172_SXD.txt  HD229238_LXD.txt  HD229238_SXD.txt
measure_extinction/data/Orig/Opt/: hd029647.mrg
measure_extinction/data/Spectra/: HD204172_LXD_spex.fits  HD229238_SXD_spex.fits  hd204172_irs.fits  hd204172_iue.fits  hd204172_lxd_spex.fits  hd204172_sxd_spex.fits  hd229238_irs.fits  hd229238_iue.fits  hd229238_lxd_spex.fits  hd229238_sxd_spex.fits
measure_extinction/plotting/: __init__.py  plot_ext.py  plot_model.py  plot_mspec.py  plot_spec.py  plot_spex_ext.py  plot_spex_spec.py
measure_extinction/tests/: test_EbvAvRv.py  test_calc_ext.py  test_conv55.py  test_extdata.py  test_merge_obsspec.py  test_model.py  test_plot_ext.py  test_plot_spec.py  test_rebin.py  test_stardata.py
measure_extinction/utils/: analyze_chains.py  calc_ext.py  calc_plot_all_extinction.py  fit_model.py  helpers.py  make_all_tlusty_obsdata.py  make_obsdata_from_model.py  merge_iue_spec.py  merge_miri_ifu_spec.py  merge_nircam_spec.py  merge_scale_plot_all_stars_spex_spectra.py  merge_spex_spec.py  merge_stis_spec.py  mock_spectra_data.py  plot_bandpasses.py  plot_ext.py  plot_modspec.py  plot_mspec.py  plot_spec.py  prepare_all_spex_spectra.py  scale_spex_spec.py  spex_corr.py
measure_extinction/utils/STIS_LSF/: plot_lsfs.py
measure_extinction/utils/STIS_LSF/data/: LSF_G140L_1200.txt  LSF_G140L_1500.txt  LSF_G230L_1700.txt  LSF_G230L_2400.txt  LSF_G430L_3200.txt  LSF_G430L_5500.txt  LSF_G750L_7000.txt
