[metadata]
name = measure_extinction
author = Karl Gordon and Marjorie Decleir
author_email = kgordon@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://measure-extinction.readthedocs.io/
description = Measure Dust Extinction
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = karllark/measure_extinction

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy
    dust_extinction
    matplotlib
    stsynphot
    pandas
    emcee

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
measure_extinction = data/*.*, data/Spectra/*.fits

[tool:pytest]
testpaths = "measure_extinction" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
norecursedirs =
    measure_extinction/docs/_build/*
    measure_extinction/docs/api/*

[options.entry_points]
console_scripts =
    meplot_spec = measure_extinction.plotting.plot_spec:main
    meplot_ext = measure_extinction.plotting.plot_ext:main
    mecalc_ext = measure_extinction.utils.calc_ext:main

[coverage:run]
omit =
    measure_extinction/_astropy_init*
    measure_extinction/conftest.py
    measure_extinction/*setup_package*
    measure_extinction/tests/*
    measure_extinction/*/tests/*
    measure_extinction/extern/*
    measure_extinction/version*
    */measure_extinction/_astropy_init*
    */measure_extinction/conftest.py
    */measure_extinction/*setup_package*
    */measure_extinction/tests/*
    */measure_extinction/*/tests/*
    */measure_extinction/extern/*
    */measure_extinction/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
max-line-length = 92
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503

[pycodestyle]
max-line-length = 92
exclude = sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py
ignore = E203, E501, W503
